# squirrel3

./: CMakeLists.txt  README.md
.github/workflows/: aarch64_toolchain.yml  amd64_freebsd.yml  amd64_macos.yml  amd64_windows.yml  arm64_docker.yml  arm64_macos.yml  arm_toolchain.yml  mips_toolchain.yml
ci/: Makefile
ci/docs/: docker.dot
ci/samples/: CMakeLists.txt  main.cpp
ci/vagrant/freebsd/: Vagrantfile
ci/vagrant/netbsd/: Vagrantfile
ci/vagrant/openbsd/: Vagrantfile
cmake/: Squirrel3Config.cmake.in  check_deps.cmake  cpp.cmake  system_deps.cmake
cmake/dependencies/: CMakeLists.txt
docs/: README.md
examples/: example.cpp
squirrel3/: CMakeLists.txt
squirrel3/include/squirrel3/: squirrel3.hpp
squirrel3/src/: squirrel3.cpp
squirrel3/tests/: squirrel3_test.cpp
tools/: cross_compile.sh
